# Automated-Testing-of-Mock-API-Database-and-Web-UI

./: .gitignore  Jenkinsfile  README.md  compose.yaml  pyproject.toml
test_config/: api_config.yaml  web_ui_config.yaml
test_data/api/: api_guids.yaml  api_inventory.yaml  api_reset_sever.yaml  upload_to_server.txt
test_data/db/: db_test_data.yaml
test_data/web_ui/: inventory_page_items.yaml  login_page_invalid_users.yaml  login_page_locked_out_user.yaml  login_page_valid_users.yaml
test_support/: PATHS.py
test_support/common/: create_logger.py  yaml_loaders.py
test_support/helpers/api/: assertions.py  base_api.py  endpoint_add_guid.py  endpoint_guids.py  endpoint_intermediate_certs.py  endpoint_inventory_devices.py  endpoint_root_certs.py  endpoint_upload_file.py
test_support/helpers/db/: database_helper.py  query_helper.py
test_support/helpers/web_ui/: cart_page.py  checkout_complete_page.py  checkout_one_page.py  checkout_two_page.py  inventory_page.py  locators.py  login_page.py
tests/: conftest.py
tests/api/: fixtures.py  test_guids.py  test_inventory_devices.py  test_retrieving_certs.py  test_uploading_file.py
tests/db/: fixtures.py  test_database.py
tests/web_ui/: fixtures.py  test_cart_page.py  test_checkout_complete_page.py  test_checkout_one_page.py  test_checkout_two_page.py  test_inventory_page.py  test_login_page.py
